--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Music festival</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet">
@@ -43,7 +44,7 @@
                     <div class="intro__subtitle">
                         Lorem ipsum dolor sit amet consectetur
                     </div>
-                    <a class="btn intro__btn btn_gradient " href="#">Lorem Ipsum</a>
+                    <a class="btn intro__btn" href="#">Lorem Ipsum</a>
                 </div>
             </div>
         </div>
@@ -126,31 +127,31 @@
             <h2 class="section__title">Galeria</h2>
             <div class="gallery">
                 <div class="gallery__item">
-                    <img src="../img/img-1.jpg" class="gallery__img" alt="">
+                    <img src="img/img-1.jpg" class="gallery__img" alt="">
                 </div>
                 <div class="gallery__item">
-                    <img src="../img/img-2.jpg" class="gallery__img" alt="">
+                    <img src="img/img-2.jpg" class="gallery__img" alt="">
                 </div>
                 <div class="gallery__item">
-                    <img src="../img/img-3.jpg" class="gallery__img" alt="">
+                    <img src="img/img-3.jpg" class="gallery__img" alt="">
                 </div>
                 <div class="gallery__item">
-                    <img src="../img/img-4.jpg" class="gallery__img" alt="">
+                    <img src="img/img-4.jpg" class="gallery__img" alt="">
                 </div>
                 <div class="gallery__item">
-                    <img src="../img/img-5.jpg" class="gallery__img" alt="">
+                    <img src="img/img-5.jpg" class="gallery__img" alt="">
                 </div>
                 <div class="gallery__item">
-                    <img src="../img/img-6.jpg" class="gallery__img" alt="">
+                    <img src="img/img-6.jpg" class="gallery__img" alt="">
                 </div>
                 <div class="gallery__item">
-                    <img src="../img/img-7.jpg" class="gallery__img" alt="">
+                    <img src="img/img-7.jpg" class="gallery__img" alt="">
                 </div>
                 <div class="gallery__item">
-                    <img src="../img/img-8.jpg" class="gallery__img" alt="">
+                    <img src="img/img-8.jpg" class="gallery__img" alt="">
                 </div>
                 <div class="gallery__item">
-                    <img src="../img/img-9.jpg" class="gallery__img" alt="">
+                    <img src="img/img-9.jpg" class="gallery__img" alt="">
                 </div>
             </div>
             <a class="btn section__btn" href="#">Lorem ipsum</a>
@@ -163,7 +164,7 @@
             <p class="map__text">Lorem ipsum dolor sit amet consectetur adipiscing elit aliquet gravida lobortis, neque ad vivamus auctor parturient et proin nam himenaeos.</p>
             <p class="map__subtext">Lorem ipsum dolor sit amet consectetur, adipiscing elit integer ac luctus mi, tellus felis sem justo.</p>
         </div>
-        <iframe class="map__item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2564.6444350722572!2d36.24076161568117!3d49.99927537941572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a0e85c877deb%3A0x5082f114ee61dd71!2z0KXQsNGA0YzQutC-0LLRgdC60LjQuSDQutC-0LzQv9GM0Y7RgtC10YDQvdC-LdGC0LXRhdC90L7Qu9C-0LPQuNGH0LXRgdC60LjQuSDQutC-0LvQu9C10LTQtg!5e0!3m2!1sru!2sua!4v1595584234590!5m2!1sru!2sua"  allowfullscreen="" iframeborder="0" aria-hidden="false" tabindex="0"></iframe>
+        <iframe class="map__item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2564.6444350722572!2d36.24076161568117!3d49.99927537941572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a0e85c877deb%3A0x5082f114ee61dd71!2z0KXQsNGA0YzQutC-0LLRgdC60LjQuSDQutC-0LzQv9GM0Y7RgtC10YDQvdC-LdGC0LXRhdC90L7Qu9C-0LPQuNGH0LXRgdC60LjQuSDQutC-0LvQu9C10LTQtg!5e0!3m2!1sru!2sua!4v1595584234590!5m2!1sru!2sua"  allowfullscreen=""  aria-hidden="false" tabindex="0"></iframe>
     </div>
 
     <footer class="footer">
